--- a/GettingStarted/HelloWindow/HelloWindow.cabal
+++ b/GettingStarted/HelloWindow/HelloWindow.cabal
@@ -10,13 +10,11 @@ extra-source-files:  CHANGELOG.md
 executable HelloWindow
   main-is:
     Main.hs
+  ghc-options:
+    -Wall -O2
   build-depends:
       base < 5
     , gl
     , GLFW-b
-    , vector
-    , bytestring
-    , bindings-GLFW
-    , JuicyPixels
   default-language:
     Haskell2010
