--- a/GettingStarted/HelloTriangle/HelloTriangle.cabal
+++ b/GettingStarted/HelloTriangle/HelloTriangle.cabal
@@ -10,13 +10,12 @@ extra-source-files:  CHANGELOG.md
 executable HelloTriangle
   main-is:
     Main.hs
+  ghc-options:
+    -Wall -O2
   build-depends:
       base < 5
     , gl
     , GLFW-b
     , vector
-    , bytestring
-    , bindings-GLFW
-    , JuicyPixels
   default-language:
     Haskell2010
